Add initial project files including session management, database connection, and basic HTML structure

--- a/service-details.html
+++ b/service-details.html
@@ -75,7 +75,7 @@
         <div
           class="container position-relative d-flex align-items-center justify-content-between"
         >
-          <a href="index.html" class="logo d-flex align-items-center">
+          <a href="index.php" class="logo d-flex align-items-center">
             <!-- Uncomment the line below if you also wish to use an image logo -->
             <!-- <img src="assets/img/logo.png" alt=""> -->
             <h1 class="sitename">Impact</h1>
@@ -91,7 +91,7 @@
               <li><a href="#services">Services</a></li>
               <li><a href="#portfolio">Portfolio</a></li>
               <li><a href="#team">Team</a></li>
-              <li><a href="blog.html">Blog</a></li>
+              <li><a href="courses.php">Blog</a></li>
               <li class="dropdown">
                 <a href="#"
                   ><span>Dropdown</span>
@@ -146,7 +146,7 @@
         <nav class="breadcrumbs">
           <div class="container">
             <ol>
-              <li><a href="index.html">Home</a></li>
+              <li><a href="index.php">Home</a></li>
               <li class="current">Service Details</li>
             </ol>
           </div>
@@ -158,11 +158,16 @@
       <section id="service-details" class="service-details section">
         <div class="container">
           <div class="row gy-4">
-            <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
+            <div
+              class="col-lg-4 sticky-top"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <div class="services-list">
-                <a href="#" class="active">Web Design</a>
+                <h4 class="my-2">Beginner Class</h4>
+                <a href="#" class="active">English</a>
                 <a href="#">Software Development</a>
-                <a href="#">Product Management</a>
+                <a href="#">Korean</a>
                 <a href="#">Graphic Design</a>
                 <a href="#">Marketing</a>
               </div>
@@ -236,7 +241,7 @@
       <div class="container footer-top">
         <div class="row gy-4">
           <div class="col-lg-5 col-md-12 footer-about">
-            <a href="index.html" class="logo d-flex align-items-center">
+            <a href="index.php" class="logo d-flex align-items-center">
               <span class="sitename">Impact</span>
             </a>
             <p>
@@ -266,11 +271,9 @@
           <div class="col-lg-2 col-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><a href="#">Web Design</a></li>
-              <li><a href="#">Web Development</a></li>
-              <li><a href="#">Product Management</a></li>
-              <li><a href="#">Marketing</a></li>
-              <li><a href="#">Graphic Design</a></li>
+              <li><a href="#">English</a></li>
+              <li><a href="#">Japanese</a></li>
+              <li><a href="#">Korean</a></li>
             </ul>
           </div>
 
